--- a/subscribeMail/subscribeMail.html
+++ b/subscribeMail/subscribeMail.html
@@ -95,7 +95,8 @@
                  alt="interior of store">
         </div>
     </div>
-    <p class="unsubscribe">If you want, you can <a href="???" target="_blank">unsubscribe</a> from emails.</p>
+    <p class="unsubscribe">If you want, you can <a href="http://localhost:3000/unsubscribe/{{mailId}}" target="_blank">unsubscribe</a>
+        from emails.</p>
 
 </div>
 </body>
