add field isAdmin to DB

--- a/templatesMail/confirmRegistration.html
+++ b/templatesMail/confirmRegistration.html
@@ -3,15 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        .block {
+            background-color: #efefef;
+            width: 600px;
+            margin: 0 auto;
+        }
+
+        .title {
+            font-size: 20px;
+            text-align: center;
+        }
+
+        .link {
+            text-decoration: none;
+            color: #33333a;
+        }
+    </style>
+
 </head>
 <body>
 
-We sent you e-mail because you have registered on out site.
-Please click on link down below to verify your e-mail and complete registration
+<div class="block">
+    <h2 class="title">
+        Hello from Matter Online Shop
+    </h2>
 
-<a href={{link}}>{{link}}</a>
+    <p class="subtitle">
+        We sent you e-mail because you have registered on our site.
+        Please click on link down below to verify your e-mail and complete registration
+    </p>
 
-Thank you!
+    <p>
+        <a class="link" href={{link}}>{{link}}</a>
+    </p>
+
+    <p>
+        Thank you!
+    </p>
+
+
+</div>
+
 
 </body>
 </html>
